--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lightning TikTok Ads – 24‑Hour Creative</title>
-    <!-- Tailwind CDN -->
+    <title>ZapTok Ads – 24‑Hour TikTok Creative</title>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body class="bg-slate-50 text-slate-800 antialiased">
@@ -14,11 +13,11 @@
       <div class="relative max-w-6xl mx-auto px-6 lg:px-8 py-24 grid grid-cols-1 lg:grid-cols-2 gap-12 items-center">
         <div>
           <h1 class="text-4xl md:text-6xl font-extrabold leading-tight text-slate-900 mb-6">
-            Lightning TikTok Ads<br />
-            <span class="text-indigo-600">delivered in&nbsp;24 hours</span>
+            ZapTok Ads<br />
+            <span class="text-indigo-600">TikTok videos in 24 hours</span>
           </h1>
           <p class="text-lg md:text-xl mb-8 max-w-xl">
-            AI‑powered creative that sells. From brief to viral‑ready video in a single day, starting at just <span class="font-semibold">£199</span>.
+            AI‑powered ad creative that sells. From brief to viral‑ready video in a single day, starting at just <span class="font-semibold">£199</span>.
           </p>
           <a href="#brief" class="inline-block bg-indigo-600 hover:bg-indigo-700 text-white font-semibold py-4 px-8 rounded-2xl shadow-lg transition">
             Get Started →
@@ -30,7 +29,7 @@
       </div>
     </section>
 
-    <!-- Packages -->
+    <!-- Packages section unchanged except brand name -->
     <section id="packages" class="py-24 bg-white">
       <div class="max-w-6xl mx-auto px-6 lg:px-8">
         <h2 class="text-3xl md:text-4xl font-bold text-center mb-16">
@@ -79,11 +78,10 @@
       </div>
     </section>
 
-    <!-- Brief form embed -->
+    <!-- Brief form -->
     <section id="brief" class="py-24 bg-slate-100">
       <div class="max-w-4xl mx-auto px-6 lg:px-8 text-center">
         <h2 class="text-3xl md:text-4xl font-bold mb-10">Submit your brief in 3 minutes</h2>
-        <!-- Replace the src below with your Typeform share link or embed code -->
         <iframe src="https://yourtypeform.typeform.com/to/ABC123" class="w-full h-[650px] rounded-xl shadow-lg" frameborder="0" allow="camera; microphone; autoplay; encrypted-media;"></iframe>
         <p class="text-sm text-slate-500 mt-4">We start work the moment you hit submit. Expect first drafts in your inbox within 12 hours.</p>
       </div>
@@ -93,13 +91,13 @@
     <footer class="bg-slate-900 text-slate-300 py-12">
       <div class="max-w-6xl mx-auto px-6 lg:px-8 grid grid-cols-1 md:grid-cols-3 gap-8">
         <div>
-          <h4 class="text-lg font-semibold mb-4 text-white">Lightning TikTok Ads</h4>
-          <p class="text-sm leading-relaxed">AI‑native micro‑agency creating high‑performance social video in record time.</p>
+          <h4 class="text-lg font-semibold mb-4 text-white">ZapTok Ads</h4>
+          <p class="text-sm leading-relaxed">AI‑native micro‑agency creating high‑performance TikTok video in record time.</p>
         </div>
         <div>
           <h4 class="text-lg font-semibold mb-4 text-white">Contact</h4>
-          <p class="text-sm">hello@lightningads.uk</p>
-          <p class="text-sm">+44 (0)20 8089 1234</p>
+          <p class="text-sm">hello@zaptok.uk</p>
+          <p class="text-sm">+44 (0)20 3588 7890</p>
         </div>
         <div>
           <h4 class="text-lg font-semibold mb-4 text-white">Follow</h4>
@@ -110,11 +108,10 @@
           </ul>
         </div>
       </div>
-      <div class="mt-8 text-center text-xs text-slate-500">© <span id="year"></span> Lightning Ads Ltd. All rights reserved.</div>
+      <div class="mt-8 text-center text-xs text-slate-500">© <span id="year"></span> ZapTok Ltd. All rights reserved.</div>
     </footer>
 
     <script>
-      // Update copyright year automatically
       document.getElementById("year").textContent = new Date().getFullYear();
     </script>
   </body>
