--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <div class="max-w-4xl mx-auto px-6 lg:px-8 text-center">
         <h2 class="text-3xl md:text-4xl font-bold mb-10">Submit your brief in 3 minutes</h2>
         <iframe
-  src="https://tally.so/r/abcd12"
+  src="https://tally.so/r/3qN9q9"
   class="w-full h-[650px] rounded-xl shadow-lg"
   frameborder="0"
   allow="clipboard-write; autoplay; encrypted-media;"
