--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
     <section id="brief" class="py-24 bg-slate-100">
       <div class="max-w-4xl mx-auto px-6 lg:px-8 text-center">
         <h2 class="text-3xl md:text-4xl font-bold mb-10">Submit your brief in 3 minutes</h2>
-        <iframe
+<iframe
   src="https://tally.so/r/3qN9q9"
   class="w-full h-[650px] rounded-xl shadow-lg"
   frameborder="0"
-  allow="clipboard-write; autoplay; encrypted-media;"
+  allow="clipboard-write; autoplay; encrypted-media; payment"
 ></iframe>
         <p class="text-sm text-slate-500 mt-4">We start work the moment you hit submit. Expect first drafts in your inbox within 12 hours.</p>
       </div>
