--- a/index.html
+++ b/index.html
@@ -82,12 +82,17 @@
     <section id="brief" class="py-24 bg-slate-100">
       <div class="max-w-4xl mx-auto px-6 lg:px-8 text-center">
         <h2 class="text-3xl md:text-4xl font-bold mb-10">Submit your brief in 3 minutes</h2>
-<iframe
-  src="https://tally.so/r/3qN9q9"
-  class="w-full h-[650px] rounded-xl shadow-lg"
-  frameborder="0"
-  allow="clipboard-write; autoplay; encrypted-media; payment"
-></iframe>
+        
+    <div class="rounded-2xl shadow-2xl ring-1 ring-slate-200 overflow-hidden">
+      <iframe
+        src="https://tally.so/r/3qN9q9?hideTitle=1&transparentBackground=1"
+        class="w-full h-[700px]"
+        frameborder="0"
+        loading="lazy"
+        allow="payment; clipboard-write; autoplay; encrypted-media"
+      ></iframe>
+    </div>
+        
         <p class="text-sm text-slate-500 mt-4">We start work the moment you hit submit. Expect first drafts in your inbox within 12 hours.</p>
       </div>
     </section>
