--- a/index.html
+++ b/index.html
@@ -1,187 +1,145 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lightning TikTok Ads – 24‑Hour Creative</title>
-    <!-- Tailwind CDN -->
-    <script src="https://cdn.tailwindcss.com"></script>
-  </head>
-  <body class="bg-slate-50 text-slate-800 antialiased">
-    <!-- Hero -->
-    <section class="relative overflow-hidden">
-      <div class="absolute inset-0 bg-gradient-to-br from-indigo-500 via-purple-600 to-pink-500 opacity-10"></div>
-      <div class="relative max-w-6xl mx-auto px-6 lg:px-8 py-24 grid grid-cols-1 lg:grid-cols-2 gap-12 items-center">
-        <div>
-          <h1 class="text-4xl md:text-6xl font-extrabold leading-tight text-slate-900 mb-6">
-            Lightning TikTok Ads<br />
-            <span class="text-indigo-600">delivered in 24 hours</span>
-          </h1>
-          <p class="text-lg md:text-xl mb-8 max-w-xl">
-            AI‑powered creative that sells. From brief to viral‑ready video in a single day, starting at just <span class="font-semibold">£199</span>.
-          </p>
-          <a href="#brief" class="inline-block bg-indigo-600 hover:bg-indigo-700 text-white font-semibold py-4 px-8 rounded-2xl shadow-lg transition">
-            Get Started →
-          </a>
-        </div>
-        <div class="lg:pl-12 flex justify-center lg:justify-end">
-          <img src="/assets/phone-mock.png" alt="TikTok ad preview" class="w-72 md:w-96 rounded-2xl shadow-2xl" />
-        </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Lightning TikTok Ads – 24‑Hour Creative</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <!-- Tally embed -->
+  <script async src="https://tally.so/widgets/embed.js"></script>
+</head>
+<body class="bg-slate-50 text-slate-800 antialiased">
+  <!-- Hero (unchanged) -->
+  <section class="relative overflow-hidden" id="hero">
+    <div class="absolute inset-0 bg-gradient-to-br from-indigo-500 via-purple-600 to-pink-500 opacity-10"></div>
+    <div class="relative max-w-6xl mx-auto px-6 lg:px-8 py-24 grid grid-cols-1 lg:grid-cols-2 gap-12 items-center">
+      <div>
+        <h1 class="text-4xl md:text-6xl font-extrabold leading-tight text-slate-900 mb-6">
+          Lightning TikTok Ads<br /><span class="text-indigo-600">delivered in&nbsp;24 hours</span>
+        </h1>
+        <p class="text-lg md:text-xl mb-8 max-w-xl">
+          AI‑powered creative that sells. From brief to viral‑ready video in a single day, starting at just <span class="font-semibold">£199</span>.
+        </p>
+        <a href="#brief" class="inline-block bg-indigo-600 hover:bg-indigo-700 text-white font-semibold py-4 px-8 rounded-2xl shadow-lg transition">Get Started →</a>
       </div>
-    </section>
-
-    <!-- Packages -->
-    <section id="packages" class="py-24 bg-white">
-      <div class="max-w-6xl mx-auto px-6 lg:px-8">
-        <h2 class="text-3xl md:text-4xl font-bold text-center mb-16">
-          Simple, transparent pricing
-        </h2>
-        <div class="grid grid-cols-1 md:grid-cols-3 gap-10">
-          <!-- Spark -->
-          <div class="border rounded-2xl p-8 shadow-sm hover:shadow-lg transition">
-            <h3 class="text-2xl font-semibold mb-4">Spark</h3>
-            <p class="mb-6 text-lg">3 scroll‑stopping ads. Delivery in 24 h.</p>
-            <p class="text-5xl font-extrabold mb-6">£199</p>
-            <ul class="space-y-3 mb-8 list-disc list-inside">
-              <li>3× 9‑15 s videos (1080 p)</li>
-              <li>Captions & trending hashtags</li>
-              <li>Commercial rights included</li>
-            </ul>
-            <a href="#brief" class="block text-center bg-indigo-600 hover:bg-indigo-700 text-white font-semibold py-3 rounded-xl shadow transition">Choose Spark</a>
-          </div>
-          <!-- Turbo -->
-          <div class="border-4 border-indigo-600 rounded-2xl p-8 shadow-md hover:shadow-xl transition transform lg:-translate-y-4">
-            <h3 class="text-2xl font-semibold mb-4">Turbo</h3>
-            <p class="mb-6 text-lg">10 ads + A/B variants & ad‑boost setup.</p>
-            <p class="text-5xl font-extrabold mb-6">£399</p>
-            <ul class="space-y-3 mb-8 list-disc list-inside">
-              <li>10× 9‑15 s videos</li>
-              <li>Human voice‑over & SRT captions</li>
-              <li>1 ad pushed to TikTok Spark Ads</li>
-              <li>Performance dashboard</li>
-            </ul>
-            <a href="#brief" class="block text-center bg-indigo-600 hover:bg-indigo-700 text-white font-semibold py-3 rounded-xl shadow transition">Choose Turbo</a>
-          </div>
-          <!-- Infinity -->
-          <div class="border rounded-2xl p-8 shadow-sm hover:shadow-lg transition">
-            <h3 class="text-2xl font-semibold mb-4">Infinity</h3>
-            <p class="mb-6 text-lg">Always‑on content engine.</p>
-            <p class="text-5xl font-extrabold mb-6">£995<span class="text-xl font-medium">/mo</span></p>
-            <ul class="space-y-3 mb-8 list-disc list-inside">
-              <li>30 ads per month</li>
-              <li>Trend monitoring & weekly reports</li>
-              <li>Dedicated Slack channel</li>
-              <li>Priority 12 h turnaround</li>
-            </ul>
-            <a href="#brief" class="block text-center bg-indigo-600 hover:bg-indigo-700 text-white font-semibold py-3 rounded-xl shadow transition">Start Subscription</a>
-          </div>
-        </div>
+      <div class="lg:pl-12 flex justify-center lg:justify-end">
+        <img src="/assets/phone-mock.png" alt="TikTok ad preview" class="w-72 md:w-96 rounded-2xl shadow-2xl" />
       </div>
-    </section>
+    </div>
+  </section>
 
-    <!-- Brief form & Image Upload -->
-    <section id="brief" class="py-24 bg-slate-100">
-      <div class="max-w-4xl mx-auto px-6 lg:px-8 text-center">
-        <h2 class="text-3xl md:text-4xl font-bold mb-10">Submit your brief in 3 minutes</h2>
+  <!-- Upload & Brief -->
+  <section id="brief" class="py-24 bg-slate-100">
+    <div class="max-w-4xl mx-auto px-6 lg:px-8">
+      <h2 class="text-3xl md:text-4xl font-bold text-center mb-10">Upload up to 5 reference images</h2>
 
-        <!-- Image upload card -->
-        <div class="bg-white rounded-2xl shadow-lg p-8 mb-12">
-          <h3 class="text-2xl font-semibold mb-4">1. Upload reference image</h3>
-          <p class="text-sm text-slate-600 mb-4">Supported aspect‑ratios: <code>0.5 – 2.0 (width ÷ height)</code>. We’ll auto‑crop anything outside that range and show a preview.</p>
-
-          <input id="fileInput" type="file" accept="image/*" class="block w-full text-sm mb-4 file:mr-4 file:py-2 file:px-4 file:rounded-lg file:border-0 file:bg-indigo-600 file:text-white hover:file:bg-indigo-700" />
-
-          <div id="ratioMessage" class="text-sm font-medium mb-4"></div>
-
-          <canvas id="previewCanvas" class="mx-auto rounded-xl shadow-lg hidden"></canvas>
-        </div>
-
-        <!-- Existing Typeform embed -->
-        <iframe src="https://yourtypeform.typeform.com/to/ABC123" class="w-full h-[650px] rounded-xl shadow-lg" frameborder="0" allow="camera; microphone; autoplay; encrypted-media;"></iframe>
-        <p class="text-sm text-slate-500 mt-4">We start work the moment you hit submit. Expect first drafts in your inbox within 12 hours.</p>
+      <!-- Upload box -->
+      <div id="uploader" class="border-2 border-dashed border-slate-300 rounded-2xl p-8 text-center cursor-pointer hover:border-indigo-500 transition mb-10">
+        <input id="fileInput" type="file" accept="image/*" multiple hidden />
+        <p class="text-lg font-medium">Drag & drop or <span class="underline text-indigo-600">browse</span></p>
+        <p class="text-sm text-slate-500">JPEG / PNG / WebP • Max 5 images</p>
       </div>
-    </section>
 
-    <!-- Footer -->
-    <footer class="bg-slate-900 text-slate-300 py-12">
-      <div class="max-w-6xl mx-auto px-6 lg:px-8 grid grid-cols-1 md:grid-cols-3 gap-8">
-        <div>
-          <h4 class="text-lg font-semibold mb-4 text-white">Lightning TikTok Ads</h4>
-          <p class="text-sm leading-relaxed">AI‑native micro‑agency creating high‑performance social video in record time.</p>
-        </div>
-        <div>
-          <h4 class="text-lg font-semibold mb-4 text-white">Contact</h4>
-          <p class="text-sm">hello@lightningads.uk</p>
-          <p class="text-sm">+44 (0)20 8089 1234</p>
-        </div>
-        <div>
-          <h4 class="text-lg font-semibold mb-4 text-white">Follow</h4>
-          <ul class="space-y-2 text-sm">
-            <li><a href="#" class="hover:text-white transition">TikTok</a></li>
-            <li><a href="#" class="hover:text-white transition">Instagram</a></li>
-            <li><a href="#" class="hover:text-white transition">LinkedIn</a></li>
-          </ul>
-        </div>
+      <!-- Preview grid -->
+      <div id="previewGrid" class="grid gap-8 sm:grid-cols-2 lg:grid-cols-3"></div>
+
+      <div class="text-center mt-12">
+        <button id="openBrief" class="bg-indigo-600 hover:bg-indigo-700 disabled:opacity-50 text-white font-semibold py-4 px-10 rounded-2xl shadow-lg transition" disabled>Open Brief Form →</button>
       </div>
-      <div class="mt-8 text-center text-xs text-slate-500">© <span id="year"></span> Lightning Ads Ltd. All rights reserved.</div>
-    </footer>
+    </div>
+  </section>
 
-    <script>
-      // Update copyright year automatically
-      document.getElementById("year").textContent = new Date().getFullYear();
+  <!-- Footer (unchanged) -->
+  <footer class="bg-slate-900 text-slate-300 py-12">
+    <div class="max-w-6xl mx-auto px-6 lg:px-8 grid grid-cols-1 md:grid-cols-3 gap-8">
+      <div>
+        <h4 class="text-lg font-semibold mb-4 text-white">Lightning TikTok Ads</h4>
+        <p class="text-sm leading-relaxed">AI‑native micro‑agency creating high‑performance social video in record time.</p>
+      </div>
+      <div>
+        <h4 class="text-lg font-semibold mb-4 text-white">Contact</h4>
+        <p class="text-sm">hello@lightningads.uk</p>
+        <p class="text-sm">+44 (0)20 8089 1234</p>
+      </div>
+      <div>
+        <h4 class="text-lg font-semibold mb-4 text-white">Follow</h4>
+        <ul class="space-y-2 text-sm">
+          <li><a href="#" class="hover:text-white transition">TikTok</a></li>
+          <li><a href="#" class="hover:text-white transition">Instagram</a></li>
+          <li><a href="#" class="hover:text-white transition">LinkedIn</a></li>
+        </ul>
+      </div>
+    </div>
+    <div class="mt-8 text-center text-xs text-slate-500">© <span id="year"></span> Lightning Ads Ltd. All rights reserved.</div>
+  </footer>
 
-      const fileInput = document.getElementById("fileInput");
-      const ratioMessage = document.getElementById("ratioMessage");
-      const previewCanvas = document.getElementById("previewCanvas");
-      const ctx = previewCanvas.getContext("2d");
+  <script>
+    document.getElementById("year").textContent = new Date().getFullYear();
 
-      fileInput.addEventListener("change", (e) => {
-        const file = e.target.files[0];
-        if (!file) return;
+    // uploader logic
+    const fileInput = document.getElementById("fileInput");
+    const uploader  = document.getElementById("uploader");
+    const grid      = document.getElementById("previewGrid");
+    const openBtn   = document.getElementById("openBrief");
 
-        const img = new Image();
-        img.onload = () => {
-          const w = img.width;
-          const h = img.height;
-          const ratio = w / h;
+    let images = []; // {orig,dataUri,width,height}
 
-          let cropX = 0, cropY = 0, cropW = w, cropH = h;
-          let message = "✅ Aspect‑ratio OK (“ + ratio.toFixed(2) + ")";
-          let messageClass = "text-green-600";
+    uploader.addEventListener("click", () => fileInput.click());
+    uploader.addEventListener("dragover", e => {e.preventDefault(); uploader.classList.add("border-indigo-500");});
+    uploader.addEventListener("dragleave", () => uploader.classList.remove("border-indigo-500"));
+    uploader.addEventListener("drop", e => {e.preventDefault(); uploader.classList.remove("border-indigo-500"); handleFiles(e.dataTransfer.files)});
+    fileInput.addEventListener("change", () => handleFiles(fileInput.files));
 
-          if (ratio < 0.5) {
-            // too tall → crop height to fit 0.5
-            cropH = Math.floor(w / 0.5);
-            cropY = Math.floor((h - cropH) / 2);
-            message = "⚠️ Image is too tall (" + ratio.toFixed(2) + "). Cropped to 0.5.";
-            messageClass = "text-orange-600";
-          } else if (ratio > 2.0) {
-            // too wide → crop width to fit 2.0
-            cropW = Math.floor(h * 2.0);
-            cropX = Math.floor((w - cropW) / 2);
-            message = "⚠️ Image is too wide (" + ratio.toFixed(2) + "). Cropped to 2.0.";
-            messageClass = "text-orange-600";
-          }
-
-          // Draw cropped image to canvas with target 1280:768 (≈1.67) or keep original ratio inside range
-          const targetRatio = 1280 / 768;
-          let drawW = 512; // preview size
-          let drawH = Math.round(drawW / targetRatio);
-
-          previewCanvas.width = drawW;
-          previewCanvas.height = drawH;
-          ctx.drawImage(img, cropX, cropY, cropW, cropH, 0, 0, drawW, drawH);
-
-          previewCanvas.classList.remove("hidden");
-          ratioMessage.textContent = message;
-          ratioMessage.className = "mb-4 text-sm font-medium " + messageClass;
+    function handleFiles(fileList){
+      const files = [...fileList].slice(0,5 - images.length);
+      if(images.length + files.length > 5){alert("Max 5 images");}
+      files.forEach(f=>{
+        const reader=new FileReader();
+        reader.onload=e=>{
+          const img=new Image();
+          img.onload=()=>{
+            const ratio=(img.width/img.height).toFixed(2);
+            const valid=ratio>=0.5 && ratio<=2;
+            const wrapper=document.createElement("div");
+            wrapper.className="border rounded-xl overflow-hidden shadow relative";
+            wrapper.innerHTML=`<img src="${e.target.result}" class="w-full h-48 object-cover"/><div class="p-3 text-sm"><span class="font-medium">Ratio:</span> ${ratio}${valid?"":" <span class='text-red-600 font-semibold'>(invalid)</span>"}</div>`;
+            if(!valid){
+              const btn=document.createElement("button");
+              btn.textContent="Crop to Fit";
+              btn.className="absolute top-2 right-2 bg-white/70 backdrop-blur py-1 px-3 text-xs rounded shadow hover:bg-white";
+              btn.onclick=()=>{
+                const square=Math.max(img.width,img.height*0.5);
+                const canvas=document.createElement("canvas");
+                canvas.width=img.height*0.5>img.width?img.height*0.5:img.width;
+                canvas.height=canvas.width/0.5;
+                const ctx=canvas.getContext("2d");
+                ctx.fillStyle="#fff"; ctx.fillRect(0,0,canvas.width,canvas.height);
+                ctx.drawImage(img,(canvas.width-img.width)/2,(canvas.height-img.height)/2);
+                const cropped=canvas.toDataURL("image/jpeg",0.9);
+                wrapper.querySelector("img").src=cropped;
+                wrapper.querySelector(".p-3").innerHTML="<span class='font-medium'>Ratio:</span> 0.50 (cropped)";
+                btn.remove();
+                entry.dataUri=cropped; entry.width=canvas.width; entry.height=canvas.height;
+              };
+              wrapper.appendChild(btn);
+            }
+            grid.appendChild(wrapper);
+            const entry={orig:e.target.result,dataUri:e.target.result,width:img.width,height:img.height};
+            images.push(entry);
+            openBtn.disabled=false;
+          };
+          img.src=e.target.result;
         };
-        const reader = new FileReader();
-        reader.onload = (evt) => {
-          img.src = evt.target.result;
-        };
-        reader.readAsDataURL(file);
+        reader.readAsDataURL(f);
       });
-    </script>
-  </body>
+    }
+
+    // Tally popup
+    openBtn.addEventListener("click",()=>{
+      const answers={};
+      images.forEach((img,i)=>answers[`Image ${i+1}`]=img.dataUri);
+      window.Tally.openPopup("https://tally.so/r/yourFormId?hideTitle=1&transparentBackground=1",{autoClose:0,answers});
+    });
+  </script>
+</body>
 </html>
