--- a/index.html
+++ b/index.html
@@ -9,18 +9,21 @@
   <script async src="https://tally.so/widgets/embed.js"></script>
 </head>
 <body class="bg-slate-50 text-slate-800 antialiased">
-  <!-- Hero (unchanged) -->
+  <!-- Hero -->
   <section class="relative overflow-hidden" id="hero">
     <div class="absolute inset-0 bg-gradient-to-br from-indigo-500 via-purple-600 to-pink-500 opacity-10"></div>
     <div class="relative max-w-6xl mx-auto px-6 lg:px-8 py-24 grid grid-cols-1 lg:grid-cols-2 gap-12 items-center">
       <div>
         <h1 class="text-4xl md:text-6xl font-extrabold leading-tight text-slate-900 mb-6">
-          Lightning TikTok Ads<br /><span class="text-indigo-600">delivered in&nbsp;24 hours</span>
+          Lightning TikTok Ads<br />
+          <span class="text-indigo-600">delivered in&nbsp;24 hours</span>
         </h1>
         <p class="text-lg md:text-xl mb-8 max-w-xl">
           AI‑powered creative that sells. From brief to viral‑ready video in a single day, starting at just <span class="font-semibold">£199</span>.
         </p>
-        <a href="#brief" class="inline-block bg-indigo-600 hover:bg-indigo-700 text-white font-semibold py-4 px-8 rounded-2xl shadow-lg transition">Get Started →</a>
+        <a href="#brief" class="inline-block bg-indigo-600 hover:bg-indigo-700 text-white font-semibold py-4 px-8 rounded-2xl shadow-lg transition">
+          Get Started →
+        </a>
       </div>
       <div class="lg:pl-12 flex justify-center lg:justify-end">
         <img src="/assets/phone-mock.png" alt="TikTok ad preview" class="w-72 md:w-96 rounded-2xl shadow-2xl" />
@@ -28,23 +31,30 @@
     </div>
   </section>
 
-  <!-- Upload & Brief -->
+  <!-- Image uploader + Tally form -->
   <section id="brief" class="py-24 bg-slate-100">
-    <div class="max-w-4xl mx-auto px-6 lg:px-8">
-      <h2 class="text-3xl md:text-4xl font-bold text-center mb-10">Upload up to 5 reference images</h2>
+    <div class="max-w-5xl mx-auto px-6 lg:px-8">
+      <h2 class="text-3xl md:text-4xl font-bold text-center mb-10">Upload up to 5 reference images</h2>
 
-      <!-- Upload box -->
-      <div id="uploader" class="border-2 border-dashed border-slate-300 rounded-2xl p-8 text-center cursor-pointer hover:border-indigo-500 transition mb-10">
-        <input id="fileInput" type="file" accept="image/*" multiple hidden />
-        <p class="text-lg font-medium">Drag & drop or <span class="underline text-indigo-600">browse</span></p>
-        <p class="text-sm text-slate-500">JPEG / PNG / WebP • Max 5 images</p>
+      <!-- Upload control -->
+      <div class="mb-12">
+        <input id="fileInput" type="file" accept="image/*" multiple class="hidden" />
+        <label for="fileInput" class="flex flex-col items-center justify-center w-full h-48 border-2 border-dashed border-indigo-400 rounded-2xl cursor-pointer hover:bg-indigo-50 transition text-indigo-600 font-semibold">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 mb-3" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 16v4a2 2 0 002 2h6a2 2 0 002-2v-4m-4-4V4m0 0l-3 3m3-3l3 3" />
+          </svg>
+          <span>Drag & drop or click to upload (max 5)</span>
+        </label>
       </div>
 
       <!-- Preview grid -->
-      <div id="previewGrid" class="grid gap-8 sm:grid-cols-2 lg:grid-cols-3"></div>
+      <div id="previewGrid" class="grid gap-6 sm:grid-cols-2 md:grid-cols-3"></div>
 
+      <!-- Launch Tally button -->
       <div class="text-center mt-12">
-        <button id="openBrief" class="bg-indigo-600 hover:bg-indigo-700 disabled:opacity-50 text-white font-semibold py-4 px-10 rounded-2xl shadow-lg transition" disabled>Open Brief Form →</button>
+        <button id="openForm" class="bg-indigo-600 disabled:bg-indigo-300 text-white font-semibold py-3 px-8 rounded-xl shadow-lg transition" disabled>
+          Open Brief Form →
+        </button>
       </div>
     </div>
   </section>
@@ -52,6 +62,7 @@
   <!-- Footer (unchanged) -->
   <footer class="bg-slate-900 text-slate-300 py-12">
     <div class="max-w-6xl mx-auto px-6 lg:px-8 grid grid-cols-1 md:grid-cols-3 gap-8">
+      <!-- content unchanged -->
       <div>
         <h4 class="text-lg font-semibold mb-4 text-white">Lightning TikTok Ads</h4>
         <p class="text-sm leading-relaxed">AI‑native micro‑agency creating high‑performance social video in record time.</p>
@@ -74,71 +85,96 @@
   </footer>
 
   <script>
+    // Update copyright year automatically
     document.getElementById("year").textContent = new Date().getFullYear();
 
-    // uploader logic
-    const fileInput = document.getElementById("fileInput");
-    const uploader  = document.getElementById("uploader");
-    const grid      = document.getElementById("previewGrid");
-    const openBtn   = document.getElementById("openBrief");
+    const fileInput   = document.getElementById('fileInput');
+    const previewGrid = document.getElementById('previewGrid');
+    const openFormBtn = document.getElementById('openForm');
 
-    let images = []; // {orig,dataUri,width,height}
+    const images = []; // {origDataUri, finalDataUri}
 
-    uploader.addEventListener("click", () => fileInput.click());
-    uploader.addEventListener("dragover", e => {e.preventDefault(); uploader.classList.add("border-indigo-500");});
-    uploader.addEventListener("dragleave", () => uploader.classList.remove("border-indigo-500"));
-    uploader.addEventListener("drop", e => {e.preventDefault(); uploader.classList.remove("border-indigo-500"); handleFiles(e.dataTransfer.files)});
-    fileInput.addEventListener("change", () => handleFiles(fileInput.files));
+    const isRatioOK = (w, h) => {
+      const r = w / h;
+      return r >= 0.5 && r <= 2;
+    };
 
-    function handleFiles(fileList){
-      const files = [...fileList].slice(0,5 - images.length);
-      if(images.length + files.length > 5){alert("Max 5 images");}
-      files.forEach(f=>{
-        const reader=new FileReader();
-        reader.onload=e=>{
-          const img=new Image();
-          img.onload=()=>{
-            const ratio=(img.width/img.height).toFixed(2);
-            const valid=ratio>=0.5 && ratio<=2;
-            const wrapper=document.createElement("div");
-            wrapper.className="border rounded-xl overflow-hidden shadow relative";
-            wrapper.innerHTML=`<img src="${e.target.result}" class="w-full h-48 object-cover"/><div class="p-3 text-sm"><span class="font-medium">Ratio:</span> ${ratio}${valid?"":" <span class='text-red-600 font-semibold'>(invalid)</span>"}</div>`;
-            if(!valid){
-              const btn=document.createElement("button");
-              btn.textContent="Crop to Fit";
-              btn.className="absolute top-2 right-2 bg-white/70 backdrop-blur py-1 px-3 text-xs rounded shadow hover:bg-white";
-              btn.onclick=()=>{
-                const square=Math.max(img.width,img.height*0.5);
-                const canvas=document.createElement("canvas");
-                canvas.width=img.height*0.5>img.width?img.height*0.5:img.width;
-                canvas.height=canvas.width/0.5;
-                const ctx=canvas.getContext("2d");
-                ctx.fillStyle="#fff"; ctx.fillRect(0,0,canvas.width,canvas.height);
-                ctx.drawImage(img,(canvas.width-img.width)/2,(canvas.height-img.height)/2);
-                const cropped=canvas.toDataURL("image/jpeg",0.9);
-                wrapper.querySelector("img").src=cropped;
-                wrapper.querySelector(".p-3").innerHTML="<span class='font-medium'>Ratio:</span> 0.50 (cropped)";
-                btn.remove();
-                entry.dataUri=cropped; entry.width=canvas.width; entry.height=canvas.height;
-              };
-              wrapper.appendChild(btn);
+    fileInput.addEventListener('change', async (e) => {
+      [...e.target.files].slice(0, 5 - images.length).forEach(file => handleFile(file));
+      fileInput.value = '';
+    });
+
+    const handleFile = (file) => {
+      const reader = new FileReader();
+      reader.onload = (evt) => {
+        const origUri = evt.target.result;
+        const img     = new Image();
+        img.onload = () => {
+          const {width: w, height: h} = img;
+          const ok = isRatioOK(w, h);
+          const wrapper = document.createElement('div');
+          wrapper.className = 'relative group';
+          wrapper.innerHTML = `
+            <img src="${origUri}" class="w-full rounded-xl shadow-sm" />
+            <div class="absolute inset-2 flex flex-col items-end space-y-2 opacity-0 group-hover:opacity-100 transition">
+              <button class="cropBtn bg-white/80 backdrop-blur px-2 py-1 text-xs rounded shadow">${ok ? 'Re‑Crop' : 'Crop to Fit'}</button>
+              <button class="dlBtn bg-white/80 backdrop-blur px-2 py-1 text-xs rounded shadow">Download</button>
+            </div>
+            <p class="mt-2 text-center text-sm ${ok ? 'text-green-600' : 'text-red-600'}">${(w/h).toFixed(2)}</p>
+          `;
+          previewGrid.appendChild(wrapper);
+
+          let finalUri = origUri;
+          const crop = () => {
+            const canvas = document.createElement('canvas');
+            const desiredR = w/h < 0.5 ? 0.5 : 2;
+            let cw, ch, sx, sy;
+            if (w/h < desiredR) { // too tall → crop height
+              cw = w; ch = w/desiredR; sx = 0; sy = (h-ch)/2;
+            } else {              // too wide → crop width
+              ch = h; cw = h*desiredR; sy = 0; sx = (w-cw)/2;
             }
-            grid.appendChild(wrapper);
-            const entry={orig:e.target.result,dataUri:e.target.result,width:img.width,height:img.height};
-            images.push(entry);
-            openBtn.disabled=false;
+            canvas.width  = cw;
+            canvas.height = ch;
+            const ctx = canvas.getContext('2d');
+            ctx.drawImage(img, sx, sy, cw, ch, 0, 0, cw, ch);
+            finalUri = canvas.toDataURL('image/jpeg');
+            wrapper.querySelector('img').src = finalUri;
+            wrapper.querySelector('p').textContent = (cw/ch).toFixed(2);
+            wrapper.querySelector('p').className = 'mt-2 text-center text-sm text-green-600';
           };
-          img.src=e.target.result;
-        };
-        reader.readAsDataURL(f);
-      });
-    }
 
-    // Tally popup
-    openBtn.addEventListener("click",()=>{
-      const answers={};
-      images.forEach((img,i)=>answers[`Image ${i+1}`]=img.dataUri);
-      window.Tally.openPopup("https://tally.so/r/yourFormId?hideTitle=1&transparentBackground=1",{autoClose:0,answers});
+          if (!ok) crop();
+
+          wrapper.querySelector('.cropBtn').addEventListener('click', crop);
+          wrapper.querySelector('.dlBtn').addEventListener('click', () => {
+            const a = document.createElement('a');
+            a.href = finalUri;
+            a.download = 'cropped.jpg';
+            a.click();
+          });
+
+          images.push(() => finalUri);
+          if (images.length) openFormBtn.removeAttribute('disabled');
+          if (images.length === 5) fileInput.disabled = true;
+        };
+        img.src = origUri;
+      };
+      reader.readAsDataURL(file);
+    };
+
+    // Open Tally with hidden fields
+    openFormBtn.addEventListener('click', () => {
+      const answers = {};
+      images.forEach((fn, idx) => answers[`image${idx+1}`] = fn());
+      Tally.openPopup(
+        'https://tally.so/r/ABC123?hideTitle=1&transparentBackground=1',
+        {
+          alignLeft: false,
+          width: 650,
+          answers
+        }
+      );
     });
   </script>
 </body>
