--- a/index.html
+++ b/index.html
@@ -34,13 +34,31 @@
     <!-- ... existing packages markup ... -->
 
     <!-- Brief form with Tally embed -->
-    <section id="brief" class="py-24 bg-slate-100">
-      <div class="max-w-4xl mx-auto px-6 lg:px-8 text-center">
-        <h2 class="text-3xl md:text-4xl font-bold mb-10">Submit your brief in 3 minutes</h2>
-        <iframe src="https://tally.so/r/ABC123" class="w-full h-[650px] rounded-xl shadow-lg" frameborder="0" allow="camera; microphone; autoplay; encrypted-media;"></iframe>
-        <p class="text-sm text-slate-500 mt-4">We start work the moment you hit submit. Expect first drafts in your inbox within 12 hours.</p>
-      </div>
-    </section>
+<!-- Tally embed: Lightning TikTok Ads brief -->
+<iframe data-tally-src="https://tally.so/embed/3qN9q9?hideTitle=1&alignLeft=1&transparentBackground=1&dynamicHeight=1"
+        loading="lazy"
+        width="100%"
+        height="650"
+        class="w-full rounded-xl shadow-lg"
+        frameborder="0"
+        marginheight="0"
+        marginwidth="0"
+        title="Lightning Ads Creative Brief"></iframe>
+
+<script>
+  /* Loads the Tally embed script once and wires up dynamic height */
+  (function (d, w, s) {
+    const v = () => {
+      if (typeof Tally !== 'undefined') { Tally.loadEmbeds(); return; }
+      d.querySelectorAll('iframe[data-tally-src]:not([src])')
+        .forEach(el => el.src = el.dataset.tallySrc);
+    };
+    if (d.querySelector(`script[src="${s}"]`)) return v();
+    const js = d.createElement('script');
+    js.src = s; js.onload = v; js.onerror = v;
+    d.body.appendChild(js);
+  })(document, window, 'https://tally.so/widgets/embed.js');
+</script>
 
     <!-- Footer (unchanged) -->
     <!-- ... footer markup ... -->
