--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <!-- Brief form with Tally embed -->
 <!-- Tally embed: Lightning TikTok Ads brief -->
-<iframe data-tally-src="https://tally.so/embed/3qN9q9"
+<iframe data-tally-src="https://tally.so/r/3qN9q9"
         loading="lazy"
         width="100%"
         height="650"
