--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 
     <!-- Brief form with Tally embed -->
 <!-- Tally embed: Lightning TikTok Ads brief -->
-<iframe data-tally-src="https://tally.so/r/3qN9q9"
+<!-- Tally embed: Lightning TikTok Ads brief -->
+<iframe data-tally-src="https://tally.so/embed/3qN9q9?hideTitle=1&alignLeft=1&transparentBackground=1&dynamicHeight=1"
         loading="lazy"
         width="100%"
         height="650"
@@ -44,6 +45,26 @@
         marginheight="0"
         marginwidth="0"
         title="Lightning Ads Creative Brief"></iframe>
+
+<script>
+  /* Loads the Tally embed script once and wires up dynamic height */
+  (function (d, w, s) {
+    const v = () => {
+      if (typeof Tally !== 'undefined') { Tally.loadEmbeds(); return; }
+      d.querySelectorAll('iframe[data-tally-src]:not([src])')
+        .forEach(el => el.src = el.dataset.tallySrc);
+    };
+    if (d.querySelector(`script[src="${s}"]`)) return v();
+    const js = d.createElement('script');
+    js.src = s; js.onload = v; js.onerror = v;
+    d.body.appendChild(js);
+  })(document, window, 'https://tally.so/widgets/embed.js');
+</script>
+
+<p class="text-sm text-slate-500 mt-4">
+  We start work the moment you hit&nbsp;submit. Expect first drafts in your inbox within&nbsp;12&nbsp;hours.
+</p>
+
 
 <script>
   /* Loads the Tally embed script once and wires up dynamic height */
